--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,12 @@ body {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
   margin: 0;
-  padding: 0; /* Remove padding from body as main-content will handle it */
+  padding: 0; /* Eliminar el padding de body ya que main-content lo manejará */
   background-color: #f8f8f8;
   color: #333;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensure body takes full viewport height */
+  min-height: 100vh; 
 }
 
 #root {
@@ -22,7 +22,7 @@ body {
 }
 
 .main-content {
-  flex: 1; /* Allows main content to grow and push footer down */
+  flex: 1; /* Permite que main-content crezca y empuje al footer hacia abajo */
   padding: 20px;
   text-align: center;
   display: flex;
@@ -35,7 +35,7 @@ h1, h2 {
   margin-bottom: 20px;
 }
 
-/* Navbar styles */
+/* Estilos para Navbar*/
 .navbar {
   background-color: #007bff;
   padding: 15px 20px;
@@ -71,7 +71,7 @@ h1, h2 {
 }
 
 .nav-button {
-  background-color: #dc3545; /* Red for logout */
+  background-color: #dc3545; /* Boton rojo para el logout */
   color: white;
   padding: 8px 15px;
   border: none;
@@ -86,7 +86,7 @@ h1, h2 {
   background-color: #c82333;
 }
 
-/* General button styles (apply to all buttons, then specific overrides) */
+/* Estilos generales para los botones */
 button {
   background-color: #007bff;
   color: white;
@@ -96,7 +96,7 @@ button {
   cursor: pointer;
   font-size: 1em;
   transition: background-color 0.3s ease, opacity 0.3s ease;
-  margin: 5px; /* Space around the button */
+  margin: 5px; 
 }
 
 button:hover:not(:disabled) {
@@ -109,13 +109,13 @@ button:disabled {
   opacity: 0.6;
 }
 
-/* Common container styles */
+/*Estilos generales para contenedores */
 .login-container, .recording-page-container, .statistics-container {
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
-  max-width: 800px; /* Adjust as needed */
+  max-width: 800px;
   width: 90%;
 }
